--- a/VinayakaGitWorkSpace/Project/VLimat.Eduz.App/VLimat.Eduz.App/Properties/launchSettings.json
+++ b/VinayakaGitWorkSpace/Project/VLimat.Eduz.App/VLimat.Eduz.App/Properties/launchSettings.json
@@ -1,16 +1,32 @@
 {
-  "$schema": "https://json.schemastore.org/launchsettings.json",
   "profiles": {
     "http": {
       "commandName": "Project",
-      "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:5229",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
         "DOTNET_SYSTEM_GLOBALIZATION_INVARIANT": "false"
+      },
+      "dotnetRunMessages": true,
+      "applicationUrl": "http://localhost:5229"
+    },
+    "IIS Express": {
+      "commandName": "IISExpress",
+      "launchBrowser": true,
+      "launchUrl": "swagger",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
       }
+    }
+  },
+  "$schema": "https://json.schemastore.org/launchsettings.json",
+  "iisSettings": {
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true,
+    "iisExpress": {
+      "applicationUrl": "http://localhost:50684/",
+      "sslPort": 44360
     }
   }
 }
